Still broken. Need to fix file and INI issues